--- a/templates/home.html
+++ b/templates/home.html
@@ -33,6 +33,25 @@
 			<figcaption class="info-wrap">
 				<a href="{{product.get_url}}" class="title">{{product.product_name}}</a>
 				<div class="price mt-1">${{product.price}}</div> <!-- price-wrap.// -->
+				<div class="rating-star">
+				<span>
+					{% if product.countReview == 0 %}
+						<i class="fas fa-star"></i>
+						<i class="fas fa-star"></i>
+						<i class="fas fa-star"></i>
+						<i class="fas fa-star"></i>
+						<i class="fas fa-star"></i>
+						<span>{{product.countReview}} reviews</span>
+					{% else %}
+						<i class="{% if product.averageReview >= 1 %}fas fa-star{% elif product.averageReview == 0.5 %}fas fa-star-half-alt{% else %}far fa-star{% endif %}" aria-hidden="true"></i>
+						<i class="{% if product.averageReview >= 2 %}fas fa-star{% elif product.averageReview == 1.5 %}fas fa-star-half-alt{% else %}far fa-star{% endif %}" aria-hidden="true"></i>
+						<i class="{% if product.averageReview >= 3 %}fas fa-star{% elif product.averageReview == 2.5 %}fas fa-star-half-alt{% else %}far fa-star{% endif %}" aria-hidden="true"></i>
+						<i class="{% if product.averageReview >= 4 %}fas fa-star{% elif product.averageReview == 3.5 %}fas fa-star-half-alt{% else %}far fa-star{% endif %}" aria-hidden="true"></i>
+						<i class="{% if product.averageReview == 5 %}fas fa-star{% elif product.averageReview == 4.5 %}fas fa-star-half-alt{% else %}far fa-star{% endif %}" aria-hidden="true"></i>
+						<span>{{product.countReview}} reviews</span>
+					{% endif %}
+				</span>
+				</div>
 			</figcaption>
 		</div>
 	</div> <!-- col.// -->
